export interface IBuildingMinMaxFloorsDTO {
    minMaxFloors: { min: number, max: number }
}
